<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="track"
            type="com.example.worldstarhiphop.network.track.Track" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/liedjeBalk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">


        <TextView
            android:id="@+id/nummer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(track.rank)}"
            tools:text="1"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titel"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{track.title_short}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nummer"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="The momentum"/>



        <TextView
            android:id="@+id/aantalKijkers"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="80k"
            tools:text="80K"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/relativeLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageView
                android:id="@+id/imageViewPlayPause"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_margin="4dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_play_arrow_black_24dp"
                android:backgroundTint="@android:color/darker_gray">

            </ImageView>

            <ImageView
                android:id="@+id/imageViewPlayPauseCircle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@android:color/darker_gray"
                android:src="@drawable/cicle_outline">


            </ImageView>

        </RelativeLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


<!--
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:backgroundTint="@android:color/darker_gray"
            app:layout_constraintTop_toTopOf="parent" />
-->

<!--

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_remove_red_eye_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/aantalKijkers"
            android:tint="@android:color/darker_gray"
            app:layout_constraintTop_toTopOf="parent" />
-->