<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="artist"
            type="com.example.worldstarhiphop.network.artist.Artist" />

        <variable
            name="viewModel"
            type="com.example.worldstarhiphop.artists.ArtistGridItemViewModel" />

    </data>


    <LinearLayout
        android:id="@+id/artiest_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/artist_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/artistCover"
            android:scaleType="centerCrop"
            app:imageUrl="@{artist.pictureBig}"
            tools:src="@drawable/post" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/whitebarArtist"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/button_ripple">

            <ImageView
                android:id="@+id/pijltje"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:tint="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView"
                style="@style/ArtistLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/artiest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/ArtistNameStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{artist.name}"
                app:layout_constraintBottom_toTopOf="@+id/pijltje"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:text="Post Malone" />

            <View
                android:id="@+id/streepBovenRecyclerView"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerLiedjeItem"
            android:visibility="gone"
            android:layout_margin="0dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/track_item"
            android:background="@android:color/white"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:itemCount="5"/>

    </LinearLayout>

</layout>