...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listArtiesten"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="0dp"
                android:clipToPadding="false"
                android:padding="0dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
...
